# forc_assignment_3

./: CMakeLists.txt  binary_test.txt  cancer.txt  gump.cmpr  main.cpp  multi_tree_test.txt  out_thing.txt  yes.cmpr  yes.txt
Classes/: Compressor.cpp  Compressor.h  Data.cpp  Data.h  Decompressor.cpp  Decompressor.h  HuffmanDecoder.cpp  HuffmanDecoder.h  HuffmanEncoder.cpp  HuffmanEncoder.h  Node.cpp  Node.h  Tree.cpp.old  Tree.h.old
Helpers/: FileHandler.cpp  FileHandler.h  HelperFunctions.cpp  HelperFunctions.h
