cmake_minimum_required(VERSION 3.17)
project(FORC_PA_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(FORC_PA_3 main.cpp Classes/Node.cpp Classes/Node.h Classes/Tree.cpp.old Classes/Tree.h.old Helpers/FileHandler.cpp Helpers/FileHandler.h Classes/Data.cpp Classes/Data.h Helpers/HelperFunctions.cpp Helpers/HelperFunctions.h)